crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/004.cypher
MERGE (n:Foo {id: $id}); RETURN 1
